fix copy button, dark mode tweaks

--- a/style.css
+++ b/style.css
@@ -88,14 +88,15 @@ body > * > * + * {
   font-size: 36px;
 }
 
-.results__section--layout {
-  display: flex;
-  align-items: center;
-  justify-content: left;
+.copyTextLayout {
+  width: 170px;
 }
 
-.results__section--layout > * {
-  margin-right: 48px;
+.results__section--layout {
+  display: flex;
+
+  align-items: center;
+  justify-content: space-between;
 }
 
 .numberCount {
@@ -118,10 +119,11 @@ body > * > * + * {
   border: 1px #e5e5e5 solid;
   line-height: 1.6;
   margin: 0px;
+  margin-left: 24px;
 }
 
 textarea::placeholder {
-  color: #474c66;
+  color: #767b96;
   font-weight: 400;
 }
 
@@ -138,7 +140,7 @@ textarea::placeholder {
   box-sizing: border-box;
   box-shadow: 0px 8px 24px rgba(0, 0, 0, 0.15);
 
-  border-radius: 8;
+  border-radius: 16px;
 }
 
 .button--style {
@@ -152,7 +154,7 @@ textarea::placeholder {
   /* Button styling */
   background: linear-gradient(180deg, #0eb16d 0%, #098b55 100%);
   border: 2px solid #098b55;
-  border-radius: 4px;
+  border-radius: 8px;
 
   margin: 1rem 0px;
   padding: 8px 32px;
@@ -187,9 +189,15 @@ a:visited {
   }
 
   .textAreaBox {
-    /* background: #03051a; */
-    /* color: #ffffff; */
-    border: 4px solid #9ca5c7;
+    background: #03051a;
+    color: #f6f7fb;
+    border: 4px solid #01063a;
+  }
+
+  .textBoxLabel {
+    background-color: #01063a;
+    color: #f6f7fb;
+    border: 1px #01020e solid;
   }
 
   label {
@@ -201,7 +209,7 @@ a:visited {
   }
 
   .numberCount {
-    color: hsl(228, 69%, 72%);
+    color: #9ca5c7;
   }
 
   .button--destructive {
